css/styles.css
/* ... */
.hero-wrapper{
  position: absolute;
  transform: translate(-50%,-50%);
  left: 50%;
  top: 50%;
  width: 500px;
  text-align: center;
  display: flex;
  align-items: center;
  flex-direction: column;
}

.hero-name{
  background-color: #E6F3FA;
  border-radius: 30px;
  padding: 1rem 2rem;
  margin: 0.5rem 0;
  box-shadow: 3px 3px 3px #003552;
  cursor: default;
  user-select: none;
}

h1{
  font-size: 32px;
  font-weight: bold;
  cursor: default;
  user-select: none;
}

h1 p{
  margin-top: 0.3rem;
  font-size: 20px;
  font-weight: lighter;
}

.hero-buttons{
  width: 100%;
  margin: 0.5rem 0;
  display: flex;
}

#ButtonProjects{margin: 0 1rem 0 1rem;}

.button{
  font-size: 18px;
  flex: 3;
  background-color: #E6F3FA;
  border-radius: 30px;
  padding: .5rem;
  text-decoration: none;
  color: #003552;
  box-shadow: 3px 3px 3px #003552;
}

.button:hover{
  background-color: #AD6BFF; 
  color: #E6F3FA;
  font-weight: bold;
  transform: translateY(-20%);
  box-shadow: 3px 10px 10px #003552;
  transition: 0.3s;
  transition-delay: 0.1s;
}

.hero-content{
  cursor: default;
  user-select: none;
  width: 100%;
  background-color: #E6F3FA;
  border-radius: 30px;
  padding: 1rem 1rem 2rem 1rem;
  margin: 0.5rem 0;
  box-shadow: 3px 3px 3px #003552;
  display: flex;
  flex-direction: row;
}

.hero-content-contact{
  text-align: left;
  line-height: 30px;
  flex: 1;
  font-size: 16px;
}

.hero-content-contact span{
  margin-left: 1rem;
  font-weight: bold;
  font-size: 18px;
}

.hero-content-about{
  margin: 0rem 1rem 0 1rem ;
  text-align: left;
  flex: 2;
}

.hero-content-about span{
  font-weight: bold;
  font-size: 18px;
  line-height: 30px;
}

.hero-content-about h2{
  font-size: 18px;
  font-weight: lighter;
  
  text-align: justify;
  text-justify: inter-word;
}

.hero-content .markdown{
  position: absolute;
  bottom: 1rem;
  left: 50%;
  transform: translateX(-50%);
  font-size: 13px;
  opacity: 0.5;
}

.hero-content-contact a{
  padding: 0 1rem 0 1rem;
  text-decoration: none;
  color: #003552;
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.hero-content-contact svg{
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #003552;
  margin-right: .3rem;
}

.hero-content-contact a:hover{
  background-color: #AD6BFF; 
  color: #E6F3FA;
  font-weight: bold;
  transition: 0.3s;
  transition-delay: 0.05s;
}

.hero-content-contact a:hover svg{
  fill: #E6F3FA;
  transition: 0.3s;
  transition-delay: 0.05s;
}
  
.projects-wave{
  position: relative;
  width: 100vw;
}

.wave-violet{
  transform: translate(-20%, -100%);
  width: 500%;
  height: 3rem;
  background-image: url("../img/Assets/Hero/WaveViolet.svg");
  background-repeat: repeat-x;
  background-position: 30px 0;
  position: absolute;
  z-index: 1;
  left: 0;
  animation: slide 50s ease-out infinite;
}

.wave-cyan{
  transform: translate(0%, -100%);
  width: 500%;
  height: 3rem;
  background-image: url("../img/Assets/Hero/WaveCyan.svg");
  background-repeat: repeat;
  background-position: 30px 0;
  position: absolute;
  z-index: 2;
  animation: slide 50s ease-in infinite;
}

.wave-heavenblue{
  transform: translate(0, -100%);
  width: 500%;
  height: 3rem;
  background-image: url("../img/Assets/Hero/WaveHeavenBlue.svg");
  background-repeat: repeat-x;
  background-position: 0 0;
  position: absolute;
  z-index: 3;
}

@keyframes slide {
  0%{left: 0;}
  50%{left: -200%;}
  100%{left: 0;}
}

#projects{
  width: 100%;
  text-align: center;
  display: flex;
  align-items: center;
  flex-direction: column;
  background-color: #CBEDFF;
  padding: 0 0 2rem 0;
}

.projects-content{
  width: 1400px;
  background-color: #CBEDFF;
}

.projects-title{
  font-size: 25.5px;
  font-weight: bold;
  text-align: left;
}

.projects-title-line{
  content: "";
  width: 100%;
  height: 0.2rem;
  background-color: #003552;
  margin: .5rem 0;
}

.projects-row{
  display: flex;
  flex-direction: row;
  margin: 1rem 0;
}

.projects-table .m{
  margin: 0;
}

.projects-item{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  flex: 1;
  width: 100%;
  background-color: #51C0FC;
  margin: 0 0 0 1rem;
  height: 15rem;
  border-radius: 20px;
  box-shadow: 2px 2px 10px #003552;
  position: relative;
}

.card-logo{
  width: 220px;
  max-width: 220px;
  height: 5rem;
}

.card-icons{
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex: 1;
  bottom: 0;
}

.card-icon{
  margin: 0 0.2rem;
  width: 2rem;
  height: 2rem;
  background-size: contain;
  background-repeat: no-repeat;
}

.IconAngular{
  background-image: url("../img/Assets/Projects/Languages/Angular.svg");  
}

.IconBootstrap{
  background-image: url("../img/Assets/Projects/Languages/Bootstrap.svg");  
}

.IconCss{
  background-image: url("../img/Assets/Projects/Languages/Css.svg");  
}

.IconHtml{
  background-image: url("../img/Assets/Projects/Languages/Html.svg");  
}

.IconJs{
  background-image: url("../img/Assets/Projects/Languages/Js.svg");  
}

.IconSass{
  background-image: url("../img/Assets/Projects/Languages/Sass.svg");  
}

.projects-item:hover{
  cursor: default;
  user-select: none;
}

.projects-item:hover .card{
  cursor: default;
  user-select: none;
  opacity: 0.5;
  filter: blur(10px);
  transition: 1s;
  position: absolute;
}

.card-overlay{
  opacity: 0;
  position: absolute;
  color: #E6F3FA;
  font-weight: bold;
  text-shadow: 1px 1px 3px #003552;
  font-size: 22px;
  text-decoration: none;
  height: 15rem;
  display: flex;
  flex-direction: column;
  width: 100%;
  justify-content: center;
  align-items: center;
}

.card-overlay p{
  margin: 1rem 0 2rem 0;
  font-weight: lighter;
  font-size: 18px;
  padding: 0 1rem;
}

.projects-item:hover .card-overlay{
  opacity: 1;
  transition: 1s;
  position: relative;
}
/* ... */

